handle wrong password when using sudo which asks for another password

Summary:
handle wrong password when using sudo which asks for another password
BUG: 389049

Test Plan: build and run with sudo and su options, test password and no, test diff languages

Reviewers: sitter, fvogt

Reviewed By: sitter, fvogt

Subscribers: starbuck, fvogt, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D10716